# nyc-property-investment-ml

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_START.md  README.md  README_COMPLETE.md  WEB_APP_README.md  analyze_property.sh  complete_integration.py  complete_setup.py  docker-compose.yml  organize_web_app.py  pyproject.toml  requirements.txt  setup.py  setup_web_app.bat  setup_web_app.sh  start_web_app.py  test_complete_system.py  web_requirements.txt
.github/workflows/: ci.yml  deploy.yml
Downloads/nyc-property-investment-ml-main/web_app/: app.py
data/: .gitkeep
docs/: API.md  DEPLOYMENT.md  REAL_DATA_INTEGRATION.md
models/saved_models/: .gitkeep
scripts/: demo_real_data.py  diagnose_data_issues.py  quick_fix_data_issues.py  run_analysis.py  setup_project.py  test_system.py  verify_integration.py
src/: __init__.py  analyzer.py  data_pipeline.py  ml_model.py
tests/: __init__.py  test_analyzer.py  test_model.py  test_pipeline.py
web_app/: app.py
web_app/static/css/: style.css
web_app/static/images/: .gitkeep  favicon_placeholder.txt
web_app/static/js/: main.js
web_app/templates/: 404.html  500.html  base.html  index.html
